...
        rememberSaveable { mutableStateOf(!isInPreview) }

    Column(modifier = modifier) {
        BisqTextFieldV0(
            value = uiState.holderNameEntry.value,
            onValueChange = { onAction(ZelleFormUiAction.OnHolderNameChange(it)) },
            label = "paymentAccounts.holderName".i18n(),
            placeholder =
                "paymentAccounts.createAccount.prompt".i18n(
                    "paymentAccounts.holderName".i18n().lowercase(),
                ),
            isError = uiState.holderNameEntry.errorMessage != null,
            bottomMessage = uiState.holderNameEntry.errorMessage,
...
@Composable
private fun ZelleFormContentPreview() {
    BisqTheme.Preview {
        ZelleFormContent(
            uiState =
                ZelleFormUiState(
                    holderNameEntry = DataEntry(value = "Alice Doe"),
                    emailOrMobileNrEntry = DataEntry(value = "alice@example.com"),
                ),
            onAction = {},
        )
    }
}
...
