...

            Column(
                modifier = Modifier.padding(BisqUIConstants.ScreenPadding),
                verticalArrangement = Arrangement.spacedBy(BisqUIConstants.ScreenPadding),
            ) {
                AccountDetailFieldRow(
                    label = "paymentAccounts.holderName".i18n(),
                    value = account.accountPayload.holderName,
                )

                AccountDetailFieldRow(
                    label = "paymentAccounts.email".i18n(),
                    value = account.accountPayload.email,
                )

                ExpandableAccountDetailFieldRow(
                    label = "mobile.paymentAccounts.currencyPicker.title".i18n(),
                    value = wiseDetail.selectedCurrencies,
...
